--- a/project.html
+++ b/project.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Bisa Kamu Ubah Sendiri</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>Main Go!</h1>
@@ -48,6 +48,6 @@
         heysoyam
       </p>
     </div>
-    <script type="text/javascript" src="js/script-main.js"></script>
+    <script type="text/javascript" src="script-main.js"></script>
   </body>
 </html>
