--- a/project.html
+++ b/project.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Bisa Kamu Ubah Sendiri</title>
+    <title>A Game of Go</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
